--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -5,6 +5,13 @@ a {
 a:hover {
     color: gray;
 }
+
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+    background-color: #28a745;
+}
+
+.custom-control-input:checked~.custom-control-label::before {
+    color: #fff;
+    border-color: #28a745;
     background-color: #28a745;
 }
