--- a/app/public/assets/css/signup.css
+++ b/app/public/assets/css/signup.css
@@ -13,14 +13,14 @@ body {
   background-color: #f5f5f5;
 }
 
-.form-signin {
+.form-signup {
   width: 100%;
-  max-width: 330px;
+  max-width: 450px;
   padding: 15px;
   margin: auto;
 }
 
-.form-signin .form-control {
+.form-signup .form-control {
   position: relative;
   box-sizing: border-box;
   height: auto;
@@ -28,18 +28,7 @@ body {
   font-size: 16px;
 }
 
-.form-signin .form-control:focus {
+.form-signup .form-control:focus {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
