--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -43,3 +43,14 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+  font-size: 3.5rem;
+  }
+}
